Research knative sharding

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -1,7 +1,15 @@
 @misc{k8sdocs,
-  title = {Kubernetes Documentation},
-  author = {{The Kubernetes Authors}},
-  date = {2023},
-  url = {https://kubernetes.io/docs/},
-  urldate = {2023-08-03},
+  title   = {Kubernetes Documentation},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://kubernetes.io/docs/},
+  urldate = {2023-08-03}
+}
+
+@misc{mooresharding,
+  author  = {Matt Moore},
+  title   = {Per-Reconciler Leader Election},
+  year    = {2020},
+  url     = {https://docs.google.com/document/d/1Q5b2L5IZe6bN3shdcaF6N_cNzGa7dKfrH8XmpE87Fuo},
+  urldate = {2023-10-21}
 }
