--- a/pandoc/includes/header.tex
+++ b/pandoc/includes/header.tex
@@ -223,7 +223,7 @@
 \newcommand{\AdditionalTitlePageLogo}{}
 % \newcommand{\AdditionalTitlePageLogo}{\fbox{\includegraphics[width=3cm]{logo/...}}}
 \newcommand{\TypeOfDocument}{Masterarbeit}
-\newcommand{\Date}{TODO}
+\newcommand{\Date}{21.08.2023 -- 20.02.2024}
 
 \makeatletter
 \renewcommand*{\maketitle}{%
