Add Spell Check configuration

--- a/pandoc/includes/header.tex
+++ b/pandoc/includes/header.tex
@@ -43,7 +43,7 @@
 \setlength{\columnsep}{0.95cm}
 \usepackage[final]{pdfpages}
 
-%% Grafics ==========================================
+%% Graphics ==========================================
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \usepackage{tikz}
@@ -79,7 +79,7 @@
 \counterwithout{figure}{chapter}
 \counterwithout{table}{chapter}
 
-% set caption label style to arabic
+% set caption label style to Arabic
 \renewcommand{\thefigure}{\arabic{figure}}
 
 % Footnotes
@@ -157,7 +157,7 @@
 %% Quotes =============================================
 \usepackage[font=itshape,vskip=5pt]{quoting}
 
-% Hypenate tt text
+% Hyphenate tt text
 \usepackage[htt]{hyphenat}
 
 %% Title & Headings ==================================
@@ -280,7 +280,7 @@ Req. \arabic{reqCounter}:
 \usepackage{setspace}
 \onehalfspacing % spacing between lines
 
-\setlength{\parindent}{0pt} % paragraph indententation
+\setlength{\parindent}{0pt} % paragraph indentation
 \setlength{\parskip}{0.8em} % spacing between paragraphs
 
 % % don't break page on new chapter
