First evaluation results for external sharding approach

--- a/pandoc/includes/header.tex
+++ b/pandoc/includes/header.tex
@@ -219,7 +219,7 @@
 \newcommand{\Course}{Informatik}
 \newcommand{\EnrollmentNumber}{8559152}
 \newcommand{\Company}{Schwarz IT KG}
-\newcommand{\Lecturer}{Prof. Dr.-Ing. habil. Dennis Pfisterer, Dennis Reinmann}
+\newcommand{\Lecturer}{\mbox{Prof. Dr.-Ing. habil. Dennis Pfisterer}, \mbox{Dennis Reinmann}}
 \newcommand{\AdditionalTitlePageLogo}{}
 % \newcommand{\AdditionalTitlePageLogo}{\fbox{\includegraphics[width=3cm]{logo/...}}}
 \newcommand{\TypeOfDocument}{Masterarbeit}
@@ -235,16 +235,16 @@
 \vspace{1.5cm}
 {\Huge\scshape \TypeOfDocument}\\[1cm]
 {\large für die Prüfung zum}\\[0.2cm]
-{\Large \Degree}\\[1.5cm]
+{\Large \Degree}\\[1.2cm]
 {\large im Studiengang}\\[0.2cm]
-{\large \Course}\\[1.5cm]
+{\large \Course}\\[1.2cm]
 {\large am Center for Advanced Studies}\\[0.2cm]
 {\large der Dualen Hochschule Baden-Württemberg}\\[0.5cm]
 {\large von}\\[0.5cm]
 {\large\bfseries \@author}\\[1cm]
 \vfill
 \end{center}
-\begin{tabular}{l@{\hspace{2cm}}l}
+\begin{tabular}{l@{\hspace{2cm}}p{9cm}}
 Matrikelnummer & \EnrollmentNumber \\
 Bearbeitungszeitraum & \Date \\
 Dualer Partner & \Company \\
