--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -1,9 +1,18 @@
+@inproceedings{studyproject,
+  author    = {Tim Ebert},
+  title     = {Towards Horizontally Scalable Kubernetes Controllers},
+  booktitle = {Study Project},
+  year      = {2023},
+  publisher = {DHBW Center for Advanced Studies},
+  url       = {https://github.com/timebertt/thesis-controller-sharding}
+}
+
 @misc{k8sdocs,
   title   = {Kubernetes Documentation},
   author  = {{The Kubernetes Authors}},
   date    = {2023},
   url     = {https://kubernetes.io/docs/},
-  urldate = {2023-08-03}
+  urldate = {2023-08-21}
 }
 
 @misc{mooresharding,
@@ -12,4 +21,25 @@
   year    = {2020},
   url     = {https://docs.google.com/document/d/1Q5b2L5IZe6bN3shdcaF6N_cNzGa7dKfrH8XmpE87Fuo},
   urldate = {2023-10-21}
+}
+
+@misc{kubevela,
+  title   = {KubeVela Documentation},
+  author  = {{KubeVela Authors}},
+  year    = {2023},
+  url     = {https://kubevela.io/docs/},
+  urldate = {2023-12-10}
+}
+
+@inproceedings{slicer16,
+  author    = {Atul Adya and Daniel Myers and Jon Howell and Jeremy Elson and Colin Meek and Vishesh Khemani and Stefan Fulger and Pan Gu and Lakshminath Bhuvanagiri and Jason Hunter and Roberto Peon and Larry Kai and Alexander Shraer and Arif Merchant and Kfir Lev-Ari},
+  title     = {Slicer: {Auto-Sharding} for Datacenter Applications},
+  booktitle = {12th USENIX Symposium on Operating Systems Design and Implementation (OSDI 16)},
+  year      = {2016},
+  isbn      = {978-1-931971-33-1},
+  address   = {Savannah, GA},
+  pages     = {739--753},
+  url       = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/adya},
+  publisher = {USENIX Association},
+  month     = nov
 }
