More notes and references

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -15,6 +15,38 @@
   urldate = {2023-08-21}
 }
 
+@misc{k8s,
+  title   = {Kubernetes},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes/kubernetes},
+  urldate = {2023-12-10}
+}
+
+@misc{k8sdesign,
+  title   = {Kubernetes Design Proposals Archive},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes/design-proposals-archive},
+  urldate = {2023-12-08}
+}
+
+@misc{k8scommunity,
+  title   = {Kubernetes Community},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes/community},
+  urldate = {2023-12-13}
+}
+
+@misc{controllerruntime,
+  title   = {Kubernetes controller-runtime Project},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes-sigs/controller-runtime},
+  urldate = {2023-11-22}
+}
+
 @misc{mooresharding,
   author  = {Matt Moore},
   title   = {Per-Reconciler Leader Election},
@@ -42,4 +74,53 @@
   url       = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/adya},
   publisher = {USENIX Association},
   month     = nov
+}
+
+@article{vogels2008eventually,
+  title     = {Eventually Consistent: Building reliable distributed systems at a worldwide scale demands trade-offs? between consistency and availability.},
+  author    = {Vogels, Werner},
+  journal   = {Queue},
+  volume    = {6},
+  number    = {6},
+  pages     = {14--19},
+  year      = {2008},
+  publisher = {ACM New York, NY, USA}
+}
+
+@inproceedings{brewer2000towards,
+  title        = {Towards robust distributed systems},
+  author       = {Brewer, Eric A},
+  booktitle    = {PODC},
+  volume       = {7},
+  number       = {10.1145},
+  pages        = {343477--343502},
+  year         = {2000},
+  organization = {Portland, OR}
+}
+
+@inproceedings{ahluwalia2006high,
+  title     = {High availability design patterns},
+  author    = {Ahluwalia, Kanwardeep Singh and Jain, Atul},
+  booktitle = {Proceedings of the 2006 conference on Pattern languages of programs},
+  pages     = {1--9},
+  year      = {2006}
+}
+
+@inproceedings{bondi2000characteristics,
+  title     = {Characteristics of scalability and their impact on performance},
+  author    = {Bondi, Andr{\'e} B},
+  booktitle = {Proceedings of the 2nd international workshop on Software and performance},
+  pages     = {195--203},
+  year      = {2000}
+}
+
+@article{jogalekar2000evaluating,
+  title     = {Evaluating the scalability of distributed systems},
+  author    = {Jogalekar, Prasad and Woodside, Murray},
+  journal   = {IEEE Transactions on parallel and distributed systems},
+  volume    = {11},
+  number    = {6},
+  pages     = {589--603},
+  year      = {2000},
+  publisher = {IEEE}
 }
