Start API machinery

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -124,3 +124,34 @@
   year      = {2000},
   publisher = {IEEE}
 }
+
+@inproceedings{soltesz2007container,
+  title     = {Container-based operating system virtualization: a scalable, high-performance alternative to hypervisors},
+  author    = {Soltesz, Stephen and P{\"o}tzl, Herbert and Fiuczynski, Marc E and Bavier, Andy and Peterson, Larry},
+  booktitle = {Proceedings of the 2Nd ACM SIGOPS/EuroSys european conference on computer systems 2007},
+  pages     = {275--287},
+  year      = {2007}
+}
+
+@misc{cncftoc,
+  author  = {{The CNCF Authors}},
+  title   = {CNCF Technical Oversight Committee (TOC)},
+  year    = {2023},
+  url     = {https://github.com/cncf/toc},
+  urldate = {2023-12-13}
+}
+
+@misc{etcddocs,
+  title   = {etcd Documentation},
+  author  = {{The etcd Authors}},
+  date    = {2023},
+  url     = {https://etcd.io/docs/v3.5/},
+  urldate = {2023-12-13}
+}
+
+@phdthesis{fielding2000architectural,
+  title  = {Architectural styles and the design of network-based software architectures},
+  author = {Fielding, Roy Thomas},
+  year   = {2000},
+  school = {University of California, Irvine}
+}
