Finish API machinery

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -155,3 +155,14 @@
   year   = {2000},
   school = {University of California, Irvine}
 }
+
+@article{harder1984observations,
+  title     = {Observations on optimistic concurrency control schemes},
+  author    = {H{\"a}rder, Theo},
+  journal   = {Information Systems},
+  volume    = {9},
+  number    = {2},
+  pages     = {111--120},
+  year      = {1984},
+  publisher = {Elsevier}
+}
