Start controller machinery

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -166,3 +166,75 @@
   year      = {1984},
   publisher = {Elsevier}
 }
+
+@misc{samplecontroller,
+  title   = {Kubernetes Sample Controller},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes/sample-controller},
+  urldate = {2023-12-14}
+}
+
+@misc{clientgo,
+  title   = {Go client for Kubernetes},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes/client-go},
+  urldate = {2023-12-14}
+}
+
+@misc{kubebuilderbook,
+  title   = {The Kubebuilder Book},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://book.kubebuilder.io/},
+  urldate = {2023-12-14}
+}
+
+@misc{operatorsdk,
+  title   = {Operator SDK},
+  author  = {{The Operator-SDK Authors}},
+  date    = {2023},
+  url     = {https://sdk.operatorframework.io/},
+  urldate = {2023-12-14}
+}
+
+@misc{javaoperatorsdk,
+  title   = {Java Operator SDK},
+  author  = {{Container Solutions}},
+  date    = {2023},
+  url     = {https://javaoperatorsdk.io/},
+  urldate = {2023-12-14}
+}
+
+@misc{kubers,
+  title   = {kube-rs},
+  author  = {{The kube-rs Authors}},
+  date    = {2023},
+  url     = {https://kube.rs/},
+  urldate = {2023-12-14}
+}
+
+@misc{metacontroller,
+  title   = {Metacontroller},
+  author  = {{Google Inc.}},
+  date    = {2023},
+  url     = {https://metacontroller.github.io/metacontroller/},
+  urldate = {2023-12-14}
+}
+
+@misc{shelloperator,
+  title   = {Shell-operator},
+  author  = {{Flant}},
+  date    = {2023},
+  url     = {https://flant.github.io/shell-operator/},
+  urldate = {2023-12-14}
+}
+
+@misc{kopf,
+  title   = {Kopf: Kubernetes Operators Framework},
+  author  = {Sergey Vasilyev, {Zalando SE}},
+  date    = {2023},
+  url     = {https://kopf.readthedocs.io/},
+  urldate = {2023-12-14}
+}
