--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -238,3 +238,10 @@
   url     = {https://kopf.readthedocs.io/},
   urldate = {2023-12-14}
 }
+
+@book{hausenblas2019programming,
+  title     = {Programming Kubernetes: Developing Cloud-Native Applications},
+  author    = {Hausenblas, Michael and Schimanski, Stefan},
+  year      = {2019},
+  publisher = {O'Reilly Media}
+}
