Start controller scalability

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -125,6 +125,43 @@
   publisher = {IEEE}
 }
 
+@inproceedings{duboc2007framework,
+  title     = {A framework for characterization and analysis of software system scalability},
+  author    = {Duboc, Leticia and Rosenblum, David and Wicks, Tony},
+  booktitle = {Proceedings of the the 6th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
+  pages     = {375--384},
+  year      = {2007}
+}
+
+@inproceedings{herbst2013elasticity,
+  title     = {Elasticity in cloud computing: What it is, and what it is not},
+  author    = {Herbst, Nikolas Roman and Kounev, Samuel and Reussner, Ralf},
+  booktitle = {10th international conference on autonomic computing (ICAC 13)},
+  pages     = {23--27},
+  year      = {2013}
+}
+
+@article{sanders201578,
+  title    = {CloudStore – Towards Scalability Benchmarking in Cloud Computing},
+  journal  = {Procedia Computer Science},
+  volume   = {68},
+  pages    = {78-88},
+  year     = {2015},
+  note     = {1st International Conference on Cloud Forward: From Distributed to Complete Computing},
+  issn     = {1877-0509},
+  doi      = {https://doi.org/10.1016/j.procs.2015.09.225},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1877050915030707},
+  author   = {Richard Sanders and Gunnar Brataas and Mariano Cecowski and Kjetil Haslum and Simon Ivanšek and Jure Polutnik and Brynjar Viken},
+  keywords = {Cloud computing, Measurements, Scalability, Performance, Capacity, Elasticity, Efficiency, Amazon Web Services, AMS, TCP-W}
+}
+
+@book{beyer2016site,
+  title     = {Site reliability engineering: How Google runs production systems},
+  author    = {Beyer, Betsy and Jones, Chris and Petoff, Jennifer and Murphy, Niall Richard},
+  year      = {2016},
+  publisher = {" O'Reilly Media, Inc."}
+}
+
 @inproceedings{soltesz2007container,
   title     = {Container-based operating system virtualization: a scalable, high-performance alternative to hypervisors},
   author    = {Soltesz, Stephen and P{\"o}tzl, Herbert and Fiuczynski, Marc E and Bavier, Andy and Peterson, Larry},
