Continue controller scalability

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -39,6 +39,14 @@
   urldate = {2023-12-13}
 }
 
+@misc{perftests,
+  title   = {Kubernetes perf-tests},
+  author  = {{The Kubernetes Authors}},
+  date    = {2023},
+  url     = {https://github.com/kubernetes/perf-tests},
+  urldate = {2023-12-17}
+}
+
 @misc{controllerruntime,
   title   = {Kubernetes controller-runtime Project},
   author  = {{The Kubernetes Authors}},
