--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -290,3 +290,11 @@
   year      = {2019},
   publisher = {O'Reilly Media}
 }
+
+@misc{fluxdocs,
+  title   = {Flux Documentation},
+  author  = {{The Flux Authors}},
+  date    = {2023},
+  url     = {https://fluxcd.io/flux/},
+  urldate = {2023-12-20}
+}
