Write configuration-based sharding

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -298,3 +298,43 @@
   url     = {https://fluxcd.io/flux/},
   urldate = {2023-12-20}
 }
+
+@misc{externaldns,
+  title   = {ExternalDNS},
+  author  = {{The Kubernetes Authors}},
+  date    = {2024},
+  url     = {https://github.com/kubernetes-sigs/external-dns},
+  urldate = {2024-01-02}
+}
+
+@misc{certmanagerdocs,
+  title   = {cert-manager Documentation},
+  author  = {{The cert-manager Authors}},
+  date    = {2024},
+  url     = {https://cert-manager.io/},
+  urldate = {2024-01-02}
+}
+
+@misc{ingressnginxdocs,
+  title   = {Ingress-Nginx Controller Documentation},
+  author  = {{The Kubernetes Authors}},
+  date    = {2024},
+  url     = {https://kubernetes.github.io/ingress-nginx/},
+  urldate = {2024-01-02}
+}
+
+@misc{prometheusoperatordocs,
+  title   = {Prometheus Operator Documentation},
+  author  = {{The Prometheus Operator Authors}},
+  date    = {2024},
+  url     = {https://prometheus-operator.dev/},
+  urldate = {2024-01-02}
+}
+
+@misc{gardenerdocs,
+  title   = {Gardener Documentation},
+  author  = {{The Gardener Authors}},
+  date    = {2024},
+  url     = {https://gardener.cloud/},
+  urldate = {2024-01-02}
+}
