Write study project

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -338,3 +338,34 @@
   url     = {https://gardener.cloud/},
   urldate = {2024-01-02}
 }
+
+@inproceedings{bigtable,
+  title     = {Bigtable: A Distributed Storage System for Structured Data},
+  author    = {Fay Chang and Jeffrey Dean and Sanjay Ghemawat and Wilson C. Hsieh and Deborah A. Wallach and Mike Burrows and Tushar Chandra and Andrew Fikes and Robert E. Gruber},
+  year      = {2006},
+  booktitle = {7th {USENIX} Symposium on Operating Systems Design and Implementation (OSDI)},
+  pages     = {205--218}
+}
+
+@misc{cassandradocs,
+  title   = {Cassandra Documentation},
+  author  = {{The Apache Software Foundation}},
+  date    = {2024},
+  url     = {https://cassandra.apache.org/doc/4.1/},
+  urldate = {2024-01-02}
+}
+
+@inproceedings{dynamo,
+  author    = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+  title     = {Dynamo: Amazon's Highly Available Key-Value Store},
+  year      = {2007},
+  isbn      = {9781595935915},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  booktitle = {Proceedings of Twenty-First ACM SIGOPS Symposium on Operating Systems Principles},
+  pages     = {205–220},
+  numpages  = {16},
+  keywords  = {scalability, reliability, performance},
+  location  = {Stevenson, Washington, USA},
+  series    = {SOSP '07}
+}
