Write example setup

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -369,3 +369,35 @@
   location  = {Stevenson, Washington, USA},
   series    = {SOSP '07}
 }
+
+@misc{prometheusdocs,
+  title   = {Prometheus Documentation},
+  author  = {{The Prometheus Authors}},
+  date    = {2024},
+  url     = {https://prometheus.io/docs/},
+  urldate = {2024-01-17}
+}
+
+@misc{kubestatemetrics,
+  title   = {kube-state-metrics},
+  author  = {{The Kubernetes Authors}},
+  date    = {2024},
+  url     = {https://github.com/kubernetes/kube-state-metrics},
+  urldate = {2024-01-17}
+}
+
+@misc{kinddocs,
+  title   = {kind Documentation},
+  author  = {{The Kubernetes Authors}},
+  date    = {2024},
+  url     = {https://kind.sigs.k8s.io/},
+  urldate = {2024-01-17}
+}
+
+@misc{parcadocs,
+  title   = {parca Documentation},
+  author  = {{The Parca Authors}},
+  date    = {2024},
+  url     = {https://www.parca.dev/docs/},
+  urldate = {2024-01-17}
+}
