--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -401,3 +401,11 @@
   url     = {https://www.parca.dev/docs/},
   urldate = {2024-01-17}
 }
+
+@misc{cadvisor,
+  title   = {cAdvisor},
+  author  = {{Google Inc.}},
+  date    = {2024},
+  url     = {https://github.com/google/cadvisor},
+  urldate = {2024-01-18}
+}
