Describe cluster and controller configuration

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -409,3 +409,11 @@
   url     = {https://github.com/google/cadvisor},
   urldate = {2024-01-18}
 }
+
+@misc{stackitdocs,
+  title   = {STACKIT Documentation},
+  author  = {{Schwarz IT KG}},
+  date    = {2024},
+  url     = {https://docs.stackit.cloud/},
+  urldate = {2024-02-01}
+}
