Extend experiment setup with optimizations

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -417,3 +417,35 @@
   url     = {https://docs.stackit.cloud/},
   urldate = {2024-02-01}
 }
+
+@misc{godocs,
+  title   = {The Go Programming Language Documentation},
+  author  = {{The Go Authors}},
+  date    = {2024},
+  url     = {https://go.dev/doc/},
+  urldate = {2024-02-06}
+}
+
+@misc{automaxprocs,
+  title   = {{automaxprocs}},
+  author  = {{Uber Technologies, Inc.}},
+  date    = {2024},
+  url     = {https://github.com/uber-go/automaxprocs},
+  urldate = {2024-02-06}
+}
+
+@article{holland2023tuning,
+  author  = {Rob Holland},
+  journal = {Temporal Blog},
+  title   = {Tuning Temporal Server request latency on Kubernetes},
+  year    = {2023},
+  url     = {https://temporal.io/blog/tuning-temporal-server-request-latency-on-kubernetes},
+  urldate = {2024-02-06}
+}
+
+@book{tsoukalos2021mastering,
+  title     = {Mastering Go - Third Edition},
+  author    = {Mihalis Tsoukalos},
+  year      = {2021},
+  publisher = {Packt Publishing}
+}
