--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -449,3 +449,163 @@
   year      = {2021},
   publisher = {Packt Publishing}
 }
+
+@misc{mariadboperator,
+  title   = {{mariadb-operator}},
+  author  = {{MariaDB Corporation}},
+  date    = {2024},
+  url     = {https://github.com/mariadb-operator/mariadb-operator},
+  urldate = {2024-02-07}
+}
+
+@misc{k8ssandra,
+  title   = {{K8ssandra}},
+  author  = {{The K8ssandra Team}},
+  date    = {2024},
+  url     = {https://k8ssandra.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{mongodboperator,
+  title   = {{MongoDB Community Kubernetes Operator}},
+  author  = {{MongoDB Inc.}},
+  date    = {2024},
+  url     = {https://github.com/mongodb/mongodb-kubernetes-operator},
+  urldate = {2024-02-07}
+}
+
+@misc{postgresoperatorzalando,
+  title   = {{Postgres Operator}},
+  author  = {{Zalando SE}},
+  date    = {2024},
+  url     = {https://github.com/zalando/postgres-operator},
+  urldate = {2024-02-07}
+}
+
+@misc{postgresoperatorcrunchy,
+  title   = {{PGO: The Postgres Operator from Crunchy Data}},
+  author  = {{Crunchy Data Solutions, Inc.}},
+  date    = {2024},
+  url     = {https://github.com/CrunchyData/postgres-operator},
+  urldate = {2024-02-07}
+}
+
+@misc{strimzi,
+  title   = {{Strimzi: Run Apache Kafka on Kubernetes and OpenShift}},
+  author  = {{The Strimzi authors}},
+  date    = {2024},
+  url     = {https://github.com/strimzi/strimzi-kafka-operator},
+  urldate = {2024-02-07}
+}
+
+@misc{koperator,
+  title   = {{Koperator}},
+  author  = {{Cisco Systems, Inc.}},
+  date    = {2024},
+  url     = {https://github.com/banzaicloud/koperator},
+  urldate = {2024-02-07}
+}
+
+@misc{rook,
+  title   = {{Rook: Open-Source, Cloud-Native Storage for Kubernetes}},
+  author  = {{The Rook Authors}},
+  date    = {2024},
+  url     = {https://rook.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{velero,
+  title   = {{Velero: Backup and migrate Kubernetes resources and persistent volumes}},
+  author  = {{The Velero Authors}},
+  date    = {2024},
+  url     = {https://velero.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{kubeflow,
+  title   = {{Kubeflow: The Machine Learning Toolkit for Kubernetes}},
+  author  = {{The Kubeflow Authors}},
+  date    = {2024},
+  url     = {https://www.kubeflow.org/},
+  urldate = {2024-02-07}
+}
+
+@misc{knative,
+  title   = {{Knative}},
+  author  = {{The Knative Authors}},
+  date    = {2024},
+  url     = {https://knative.dev/},
+  urldate = {2024-02-07}
+}
+
+@misc{istio,
+  title   = {{Istio}},
+  author  = {{The Istio Authors}},
+  date    = {2024},
+  url     = {https://istio.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{clusterapi,
+  title   = {{Kubernetes Cluster API}},
+  author  = {{The Kubernetes Authors}},
+  date    = {2024},
+  url     = {https://cluster-api.sigs.k8s.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{crossplane,
+  title   = {{Crossplane: The cloud native control plane framework}},
+  author  = {{The Crossplane Authors}},
+  date    = {2024},
+  url     = {https://www.crossplane.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{argocd,
+  title   = {{Argo CD}},
+  author  = {{The Argo Project Authors}},
+  date    = {2024},
+  url     = {https://argoproj.github.io/cd/},
+  urldate = {2024-02-07}
+}
+
+@misc{flux,
+  title   = {{Flux}},
+  author  = {{The Flux Authors}},
+  date    = {2024},
+  url     = {https://fluxcd.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{kubevela,
+  title   = {{KubeVela}},
+  author  = {{The KubeVela Authors}},
+  date    = {2024},
+  url     = {https://kubevela.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{yaook,
+  title   = {{Yaook: The Lifecycle Management Tool for OpenStack and SecuStack}},
+  author  = {{The Yaook Authors}},
+  date    = {2024},
+  url     = {https://yaook.cloud/},
+  urldate = {2024-02-07}
+}
+
+@misc{operatorhub,
+  title   = {{OperatorHub.io}},
+  author  = {{The Operator Framework Authors}},
+  date    = {2024},
+  url     = {https://operatorhub.io/},
+  urldate = {2024-02-07}
+}
+
+@misc{argocddocs,
+  title   = {{Argo CD Documentation}},
+  author  = {{The Argo Project Authors}},
+  date    = {2024},
+  url     = {https://argo-cd.readthedocs.io/en/stable/},
+  urldate = {2024-02-07}
+}
