Add related work in flux

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -586,6 +586,14 @@
   urldate = {2024-02-07}
 }
 
+@misc{ironcore,
+  title   = {{IronCore: Cloud Native Infrastructure as a Service}},
+  author  = {{SAP SE}},
+  date    = {2024},
+  url     = {https://github.com/ironcore-dev/ironcore},
+  urldate = {2024-02-07}
+}
+
 @misc{operatorhub,
   title   = {{OperatorHub.io}},
   author  = {{The Operator Framework Authors}},
