Add releated work in Argo CD

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -558,7 +558,7 @@
   title   = {{Argo CD}},
   author  = {{The Argo Project Authors}},
   date    = {2024},
-  url     = {https://argoproj.github.io/cd/},
+  url     = {https://github.com/argoproj/argo-cd},
   urldate = {2024-02-07}
 }
 
@@ -608,4 +608,31 @@
   date    = {2024},
   url     = {https://argo-cd.readthedocs.io/en/stable/},
   urldate = {2024-02-07}
+}
+
+@article{argoaws,
+  author  = {Andrew Lee and Christina Andonov and Carlos Santana and Nima Kaviani},
+  journal = {AWS Open Source Blog},
+  title   = {Argo CD Application Controller Scalability Testing on Amazon EKS},
+  year    = {2023},
+  url     = {https://aws.amazon.com/blogs/opensource/argo-cd-application-controller-scalability-testing-on-amazon-eks/},
+  urldate = {2024-02-08}
+}
+
+@article{argocnoe,
+  author  = {Andrew Lee and Gaurav Dhamija and Michael Crenshaw},
+  journal = {CNOE Blog},
+  title   = {Argo CD Benchmarking - Pushing the Limits and Sharding Deep Dive},
+  year    = {2023},
+  url     = {https://cnoe.io/blog/argo-cd-application-scalability},
+  urldate = {2024-02-08}
+}
+
+@article{argoinfracloud,
+  author  = {Amar Chand},
+  journal = {InfraCloud Blog},
+  title   = {Sharding the Clusters across Argo CD Application Controller Replicas},
+  year    = {2023},
+  url     = {https://www.infracloud.io/blogs/sharding-clusters-across-argo-cd-application-controller-replicas/},
+  urldate = {2024-02-08}
 }
