--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -636,3 +636,24 @@
   url     = {https://www.infracloud.io/blogs/sharding-clusters-across-argo-cd-application-controller-replicas/},
   urldate = {2024-02-08}
 }
+
+@article{adams2015practice,
+  title     = {The practice and future of release engineering: A roundtable with three release engineers},
+  author    = {Adams, Bram and Bellomo, Stephany and Bird, Christian and Marshall-Keim, Tamara and Khomh, Foutse and Moir, Kim},
+  journal   = {IEEE Software},
+  volume    = {32},
+  number    = {2},
+  pages     = {42--49},
+  year      = {2015},
+  publisher = {IEEE}
+}
+
+@article{schermann2018,
+  title   = {Continuous Experimentation: Challenges, Implementation Techniques, and Current Research},
+  author  = {Schermann, Gerald and Cito, Jürgen and Leitner, Philipp},
+  journal = {IEEE Software},
+  year    = {2018},
+  volume  = {35},
+  number  = {2},
+  pages   = {26-31}
+}
