--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -79,7 +79,6 @@
   isbn      = {978-1-931971-33-1},
   address   = {Savannah, GA},
   pages     = {739--753},
-  url       = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/adya},
   publisher = {USENIX Association},
   month     = nov
 }
@@ -157,8 +156,6 @@
   year     = {2015},
   note     = {1st International Conference on Cloud Forward: From Distributed to Complete Computing},
   issn     = {1877-0509},
-  doi      = {https://doi.org/10.1016/j.procs.2015.09.225},
-  url      = {https://www.sciencedirect.com/science/article/pii/S1877050915030707},
   author   = {Richard Sanders and Gunnar Brataas and Mariano Cecowski and Kjetil Haslum and Simon Ivanšek and Jure Polutnik and Brynjar Viken},
   keywords = {Cloud computing, Measurements, Scalability, Performance, Capacity, Elasticity, Efficiency, Amazon Web Services, AMS, TCP-W}
 }
@@ -656,4 +653,14 @@
   volume  = {35},
   number  = {2},
   pages   = {26-31}
+}
+
+@article{chaos2016,
+  author  = {Basiri, Ali and Behnam, Niosha and de Rooij, Ruud and Hochstein, Lorin and Kosewski, Luke and Reynolds, Justin and Rosenthal, Casey},
+  journal = {IEEE Software},
+  title   = {Chaos Engineering},
+  year    = {2016},
+  volume  = {33},
+  number  = {3},
+  pages   = {35-41}
 }
