Shortly describe projects in related work

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -560,10 +560,10 @@
 }
 
 @misc{flux,
-  title   = {{Flux}},
+  title   = {{Flux Documentation}},
   author  = {{The Flux Authors}},
   date    = {2024},
-  url     = {https://fluxcd.io/},
+  url     = {https://fluxcd.io/flux/},
   urldate = {2024-02-07}
 }
 
@@ -605,6 +605,22 @@
   date    = {2024},
   url     = {https://argo-cd.readthedocs.io/en/stable/},
   urldate = {2024-02-07}
+}
+
+@misc{kustomizedocs,
+  title   = {{Kustomize Documentation}},
+  author  = {{The Kubernetes Authors}},
+  date    = {2024},
+  url     = {https://kustomize.io/},
+  urldate = {2024-02-14}
+}
+
+@misc{helmdocs,
+  title   = {{Helm: The package manager for Kubernetes}},
+  author  = {{The Helm Authors}},
+  date    = {2024},
+  url     = {https://helm.sh/},
+  urldate = {2024-02-14}
 }
 
 @article{argoaws,
