Final formatting and nits

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -1,10 +1,7 @@
-@inproceedings{studyproject,
-  author    = {Tim Ebert},
-  title     = {Towards Horizontally Scalable Kubernetes Controllers},
-  booktitle = {Study Project},
-  year      = {2023},
-  publisher = {DHBW Center for Advanced Studies},
-  url       = {https://github.com/timebertt/thesis-controller-sharding}
+@thesis{studyproject,
+  author = {Tim Ebert},
+  title  = {Towards Horizontally Scalable Kubernetes Controllers},
+  year   = {2023}
 }
 
 @misc{k8sdocs,
