--- a/pandoc/includes/header.tex
+++ b/pandoc/includes/header.tex
@@ -219,7 +219,7 @@
 \newcommand{\Course}{Informatik}
 \newcommand{\EnrollmentNumber}{8559152}
 \newcommand{\Company}{Schwarz IT KG}
-\newcommand{\Lecturer}{\mbox{Prof. Dr.-Ing. habil. Dennis Pfisterer}, \mbox{Dennis Reinmann}}
+\newcommand{\Lecturer}{\mbox{Prof. Dr.-Ing. habil. Dennis Pfisterer}, \mbox{MBA Dennis Reinmann}}
 \newcommand{\AdditionalTitlePageLogo}{}
 % \newcommand{\AdditionalTitlePageLogo}{\fbox{\includegraphics[width=3cm]{logo/...}}}
 \newcommand{\TypeOfDocument}{Masterarbeit}
